compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__discard_unused_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() -> Nil{\n    let x = 3\nNil\n}"
---
----- BEFORE ACTION
pub fn main() -> Nil{
    let x = 3
        ↑    
Nil
}


----- AFTER ACTION
pub fn main() -> Nil{
    let _x = 3
Nil
}
