compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_block_tail_position_3.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 10596
expression: "\npub fn main() {\n  case 1 {\n    _ -> {\n      use <- wibble\n      123\n    }\n    _ -> todo\n  }\n}\n\nfn wibble(f: fn() -> Float) -> Float { f() }\n"
snapshot_kind: text
---
----- BEFORE ACTION

pub fn main() {
  case 1 {
    _ -> {
         ▔
      use <- wibble
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
      123
▔▔▔▔▔▔▔▔▔
    }
▔▔▔▔↑
    _ -> todo
  }
}

fn wibble(f: fn() -> Float) -> Float { f() }


----- AFTER ACTION

pub fn main() {
  case 1 {
    _ -> function()
    _ -> todo
  }
}

fn function() -> Float {
  use <- wibble
      123
}

fn wibble(f: fn() -> Float) -> Float { f() }
