compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let c = #(\"one\", \"two\", \"three\")\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #("one", "two", "three")
          ▔↑                      
}


----- AFTER ACTION
const value = #("one", "two", "three")

pub fn main() {
  let c = value
}
