compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_record_variant_1.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub type Auth {\n  Verified(String)\n  Unverified\n}\n\npub fn main() {\n  let u = Verified(\"User\")\n  let v = verify(something, u)\n\n  v\n}\n"
---
----- BEFORE ACTION
pub type Auth {
  Verified(String)
  Unverified
}

pub fn main() {
  let u = Verified("User")
  ▔▔▔▔↑                   
  let v = verify(something, u)

  v
}


----- AFTER ACTION
pub type Auth {
  Verified(String)
  Unverified
}

const u = Verified("User")

pub fn main() {
  let v = verify(something, u)

  v
}
