compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let c = #(\"constant\", \"another_literal\")\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #("constant", "another_literal")
           ↑                              
}


----- AFTER ACTION
const value = #("constant", "another_literal")

pub fn main() {
  let c = value
}
