compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_whole_declaration_of_int.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/io\npub fn main() {\n  let c = 125\n  io.debug(c)\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  let c = 125
  ▔▔▔▔↑      
  io.debug(c)
}


----- AFTER ACTION
import gleam/io

const c = 125

pub fn main() {
  io.debug(c)
}
